--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,183 @@
-body { 
-  background: url();
-  background-size: cover;
-  background: white;
-  width: 100%;
-  height: 700px;
+* {
+  color: white;
+  margin: 0;
+  padding: 0;
+  font-family: Courier New;
+  font-size: 15px;
 }
+
+body{
+  margin: 0 auto;
+  padding: 0;
+  background: #000;
+}
+
+div.first-section {
+  background: url(../images/millionaire_background.png) no-repeat center;
+  background-size: auto 100%;
+  width: 100%;
+  height: 100vh;
+}
+
+.home-buttons button {
+  opacity: 0.8;
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  -webkit-box-shadow: 0px 1px 3px #424ade;
+  font-family: Courier New;
+  color: white;
+  font-size: 20px;
+  background: black;
+  padding: 20px 110px 20px 110px;
+  border: solid #000080 2px;
+  text-decoration: none;
+}
+
+.home-buttons {
+  padding-top: 500px;
+  text-align: center;
+}
+
+.home-buttons button:hover {
+ background-color: #000080;
+ border: solid black 2px;
+}
+
+p.question { 
+ margin-top: 240px;
+
+
+}
+
+
+div.second-section {
+  display: none;
+  position: center;
+  background: url(../images/background_three.png) no-repeat center;
+  background-size: auto 100%;
+  width: 100%;
+  height: 100vh;
+}
+
+.second-section {
+ text-align: center;
+}
+
+.second-section button {
+  opacity: 0.9;
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  -webkit-box-shadow: 0px 1px 3px #424ade;
+  font-family: Courier New;
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  background: black;
+  border: solid #000080 2px;
+  text-decoration: none;
+  width: 480px;
+  height: 100px;
+}
+
+.second-section button:first-child {
+  position: absolute;
+  left: 120px;
+  margin-top: 300px;
+}
+.second-section button:last-child {
+  position: absolute;
+  right: 120px;
+  margin-top: 300px;
+  padding: 10px;
+}
+.second-section button:hover {
+  background-color: #000080;
+  border: solid black 2px;
+}
+
+
+div.options { 
+  position: absolute;
+  width: 100%;
+  margin-bottom: 35px;
+}
+
+div.options div {
+  width: 100%;
+  height: 200px;
+}
+
+
+h3 {
+ font-family: Courier New;
+ text-align: left;
+ color: white;
+ padding: 10px 10px 10px 10px;
+ font-size: 20px;
+ background: black;
+
+}
+
+
+p {
+  opacity: 0.8;
+  background: black;
+  text-align: left;
+
+}
+
+p#question {
+  position: absolute;
+  top: 165px;
+  left: 258px;
+  font-size: 16px;
+  text-align: center;
+}
+
+
+
+div.last-section { 
+  position: absolute;
+  left: 80px;
+  font-size: 20px;
+  font-family: Courier New;
+}
+
+div.last-section h3 {
+  text-align: center;
+}
+
+div.last-section p {
+  padding: 10px;
+}
+
+.first-row {
+  margin-top: 500px;
+}
+
+.second-row {
+  bottom: 120px;
+}
+
+.options {
+  margin-top: 150px;
+}
+
+h4.players.turn {
+  padding: 10px;
+}
+
+a {
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background: black;
+}
+
+
+
+
+
 
 
 
